feat: add layout & connect ton wallet

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
         <title>Phaser React Template</title>
 
         <meta charset='utf-8' /> -->
-
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" rel="stylesheet" />
         <title>Doodle Fish</title>
 
         <base href="/" />
@@ -22,7 +22,6 @@
             content="You need to avoid obstacles, keeping the little fish alive."
         />
         <meta name="theme-color" content="#3e66d2" />
-
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-title" content="Dodging Fish" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -58,6 +57,10 @@
         />
 
         <link rel="stylesheet" href="/style.css" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
