--- a/web/index.html
+++ b/web/index.html
@@ -31,19 +31,19 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="/icons/apple-touch-icon.png"
+            href="/icons/icon.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="/icons/favicon-32x32.png"
+            href="/icons/icon.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="/icons/favicon-16x16.png"
+            href="/icons/icon.png"
         />
 
         <link rel="manifest" href="/manifest.json" />
